[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Hazards/VehicleSpawner.gd" type="Script" id=1]

[node name="VehicleSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="VehiclesInitialPosition" type="Position2D" parent="."]

[node name="VehiclesGoalPosition" type="Position2D" parent="."]

[node name="TimerSpawnRate" type="Timer" parent="."]
[connection signal="timeout" from="TimerSpawnRate" to="." method="_on_TimerSpawnRate_timeout"]
